# cocomon

./: CMakeLists.txt  battle.cpp  battle.h  battle_scene.cpp  battle_scene.h  game.h  main.cpp  trainers.cpp  trainers.h
sprites/: fricka_flow_back.aseprite  fricka_flow_front.aseprite  jokko.aseprite  locomoco_back.aseprite  molly_back.aseprite  molly_front.aseprite  waka-caca_front.aseprite
